--- a/readthedocsext/theme/templates/projects/partials/dashboard/example-projects.html
+++ b/readthedocsext/theme/templates/projects/partials/dashboard/example-projects.html
@@ -1,11 +1,20 @@
-<div class="ui card">
-  <div class="content">
-    <a class="header" target="_blank" href="https://docs.readthedocs.io/en/stable/examples.html">Get inspiration from example projects</a>
-    <div class="description">
-      Writing documentation is hard.
-      We know it.
-      Get started quickly with these example projects for a few common tools.
-      With our example projects, you can focus on writing documentation, which is what you love, right?
+{% load i18n %}
+
+{% with "https://docs.readthedocs.io/page/examples.html" as url %}
+  <div class="ui card">
+    <div class="content">
+      <a class="header" target="_blank" href="{{ url }}">{% trans "Get inspiration from example projects" %}</a>
+      <div class="description">
+        {% blocktrans %}
+          Not sure how to get started?
+          Check out these example projects for a few common tools to get some inspiration.
+        {% endblocktrans %}
+      </div>
+    </div>
+    <div class="ui grid extra content">
+      <a class="ui sixteen wide column positive basic button" target="_blank" href="{{ url }}">
+        {% trans "Check out example projects" %}
+      </a>
     </div>
   </div>
-</div>
+{% endwith %}
