--- a/readthedocsext/theme/templates/projects/partials/dashboard/pull-request-previews.html
+++ b/readthedocsext/theme/templates/projects/partials/dashboard/pull-request-previews.html
@@ -1,9 +1,20 @@
-<div class="ui card">
-  <div class="content">
-    <a class="header" target="_blank" href="https://docs.readthedocs.io/page/pull-requests.html">Preview changes before deploying!</a>
-    <div class="description">
-      Automatically build, preview, and share documentation with every pull request
-      and easily catch issues before going live.
+{% load i18n %}
+
+{% with "https://docs.readthedocs.io/page/pull-request.html" as url %}
+  <div class="ui card">
+    <div class="content">
+      <a class="header" target="_blank" href="{{ url }}">{% trans "Preview changes before deploying!" %}</a>
+      <div class="description">
+        {% blocktrans %}
+          Automatically build, preview, and share documentation with every pull request
+          and easily catch issues before going live.
+        {% endblocktrans %}
+      </div>
+    </div>
+    <div class="ui grid extra content">
+      <a class="ui sixteen wide column positive basic button" target="_blank" href="{{ url }}">
+        {% trans "Enable pull request previews" %}
+      </a>
     </div>
   </div>
-</div>
+{% endwith %}
