--- a/readthedocsext/theme/templates/projects/partials/dashboard/security-logs.html
+++ b/readthedocsext/theme/templates/projects/partials/dashboard/security-logs.html
@@ -1,9 +1,20 @@
-<div class="ui card">
-  <div class="content">
-    <a class="header" target="_blank" href="https://docs.readthedocs.io/page/security-log.html">Monitor your organization with security logs</a>
-    <div class="description">
-      Security logs allow you to <em>audit activity</em> around logins and team changes within your organization.
-      We store the IP address and the browser on each event, so that you can confirm this access was from the right person.
+{% load i18n %}
+
+{% with "https://docs.readthedocs.io/page/security-log.html" as url %}
+  <div class="ui card">
+    <div class="content">
+      <a class="header" target="_blank" href="{{ url }}">{% trans "Monitor your organization with security logs" %}</a>
+      <div class="description">
+        {% blocktrans %}
+          Security logs allow you to <em>audit activity</em> around logins and team changes within your organization.
+          We store the IP address and the browser on each event, so that you can confirm this access was from the right person.
+        {% endblocktrans %}
+      </div>
+    </div>
+    <div class="ui grid extra content">
+      <a class="ui sixteen wide column positive basic button" target="_blank" href="{{ url }}">
+        {% trans "Enable security logs" %}
+      </a>
     </div>
   </div>
-</div>
+{% endwith %}
