Updates from feedback

--- a/readthedocsext/theme/templates/projects/partials/dashboard/ruby-support.html
+++ b/readthedocsext/theme/templates/projects/partials/dashboard/ruby-support.html
@@ -11,8 +11,8 @@
         {% endblocktrans %}
       </div>
     </div>
-    <div class="ui grid extra content">
-      <a class="ui sixteen wide column positive basic button" target="_blank" href="{{ url }}">
+    <div class="ui extra content">
+      <a class="ui small primary fluid basic button" target="_blank" href="{{ url }}">
         {% trans "Use Ruby to build your docs" %}
       </a>
     </div>
