--- a/readthedocsext/theme/templates/projects/partials/dashboard/traffic-analytics.html
+++ b/readthedocsext/theme/templates/projects/partials/dashboard/traffic-analytics.html
@@ -12,9 +12,9 @@
         {% endblocktrans %}
       </div>
     </div>
-    <div class="ui grid extra content">
-      <a class="ui sixteen wide column positive basic button" target="_blank" href="{{ url }}">
-        {% trans "Enable pull request previews" %}
+    <div class="ui extra content">
+      <a class="ui small primary fluid basic button" target="_blank" href="{{ url }}">
+        {% trans "Enable analytics" %}
       </a>
     </div>
   </div>
