--- a/readthedocsext/theme/templates/projects/partials/dashboard/pull-request-previews.html
+++ b/readthedocsext/theme/templates/projects/partials/dashboard/pull-request-previews.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% with "https://docs.readthedocs.io/page/pull-request.html" as url %}
+{% with "https://docs.readthedocs.io/page/pull-requests.html" as url %}
   <div class="ui card">
     <div class="content">
       <a class="header" target="_blank" href="{{ url }}">{% trans "Preview changes before deploying!" %}</a>
