Add invitation listing to project maintainer list
Also update organization/team listing views with common listing

--- a/readthedocsext/theme/templates/includes/crud/remove_button.html
+++ b/readthedocsext/theme/templates/includes/crud/remove_button.html
@@ -48,9 +48,13 @@
 
       Modal content text
 
+  .. describe:: is_disabled
+
+      Show the button as disabled
+
 {% endcomment %}
 
-<div class="ui icon button"
+<div class="ui {% if is_disabled %}disabled{% endif %} icon button"
      data-bind="click: $root.show_modal('remove-{{ id }}')"
      data-content="{{ action_text }}">
   <i class="fa-solid fa-trash icon"></i>
