--- a/readthedocsext/theme/templates/projects/notification_list.html
+++ b/readthedocsext/theme/templates/projects/notification_list.html
@@ -10,16 +10,8 @@
 
 {% block project_edit_content %}
   {% include "projects/partials/edit/notification_email_list.html" with objects=emails %}
-  <h4 class="ui tiny header">
-    {% trans "Add email notification" %}
-  </h4>
-  <form class="ui form" method="post" action=".">
-    {% csrf_token %}
-    {{ email_form|crispy }}
-    <input class="ui primary button" type="submit" value="{% trans "Add" %}">
-  </form>
 {% endblock %}
 
 {% block project_edit_sidebar_help_topics %}
-  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/build-notifications.html" text="How to setup build notifications and webhooks" is_external=True class="item" %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/build-notifications.html" text="How to set up build notifications" is_external=True class="item" %}
 {% endblock project_edit_sidebar_help_topics %}
