--- a/readthedocsext/theme/templates/projects/partials/edit/notification_email_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/notification_email_list.html
@@ -8,14 +8,17 @@
 {% load privacy_tags %}
 {% load projects_tags %}
 
-{# TODO we aren't showing a top menu here, because of the pattern used on this view #}
-{% block top_menu %}
-{% endblock top_menu %}
-
 {% block top_left_menu_items %}
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
+  <div class="item">
+    <a class="ui green button"
+       href="{% url "projects_notifications_create" project.slug %}">
+      <i class="fas fa-plus icon"></i>
+      {% trans "Add notification" %}
+    </a>
+  </div>
 {% endblock %}
 
 {% block list_placeholder_icon_class %}fa-duotone fa-envelope-dot{% endblock %}
