Consolidate patterns for create view buttons
There are a few different styles used, move this to a common include
instead.

--- a/readthedocsext/theme/templates/organizations/partials/organization_list.html
+++ b/readthedocsext/theme/templates/organizations/partials/organization_list.html
@@ -16,9 +16,8 @@
 {% block create_button %}
   {# See below for more background on why we conditionally show a create button here #}
   {% if request.user and request.user.organizations.count == 0 %}
-    <a class="ui green button" href="{{ organization_create }}">
-      {% trans "Create organization" %}
-    </a>
+    {% trans "Add organization" as create_text %}
+    {% include "includes/crud/create_button.html" with url=organization_create text=create_text %}
   {% endif %}
 {% endblock %}
 
