--- a/readthedocsext/theme/templates/projects/partials/edit/subproject_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/subproject_list.html
@@ -12,13 +12,9 @@
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
-  <div class="item">
-    <a class="ui green icon button"
-       href="{% url 'projects_subprojects_create' project_slug=project.slug %}">
-      <i class="fa-solid fa-plus icon"></i>
-      {% trans "Add subproject" %}
-    </a>
-  </div>
+  {% url "projects_subprojects_create" project_slug=project.slug as create_url %}
+  {% trans "Add subproject" as create_text %}
+  {% include "includes/crud/create_button.html" with url=create_url text=create_text %}
 {% endblock %}
 
 {% block list_placeholder_icon_class %}fa-duotone fa-sitemap{% endblock %}
