--- a/readthedocsext/theme/templates/projects/partials/edit/domain_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/domain_list.html
@@ -27,13 +27,9 @@
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
-  <div class="item">
-    <a class="ui green icon button"
-       href="{% url "projects_domains_create" project.slug %}">
-      <i class="fa-solid fa-plus icon"></i>
-      {% trans "Add domain" %}
-    </a>
-  </div>
+  {% url "projects_domains_create" project.slug as create_url %}
+  {% trans "Add domain" as create_text %}
+  {% include "includes/crud/create_button.html" with url=create_url text=create_text %}
 {% endblock %}
 
 {% block list_placeholder_icon_class %}fa-duotone fa-at{% endblock %}
