--- a/readthedocsext/theme/templates/organizations/settings/owners_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/owners_edit.html
@@ -8,7 +8,7 @@
 {% block organization_edit_content_header %}{% trans "Owners" %}{% endblock %}
 
 {% block organization_edit_content %}
-  {% include "organizations/partials/owners_list.html" with objects=owners %}
+  {% include "organizations/partials/owners_list.html" with objects=object_list %}
 
   {% comment %}
     TODO move owner/team member invitations to a dedicated view.
