Environment variables: typo

--- a/readthedocsext/theme/templates/projects/environmentvariable_form.html
+++ b/readthedocsext/theme/templates/projects/environmentvariable_form.html
@@ -13,7 +13,7 @@
     <div class="content">
       {% blocktrans trimmed %}
         This environment variable will be available to all build
-        commands.  The value of the this variable will be hidden
+        commands.  The value of this variable will be hidden
         after adding, for security purposes.
       {% endblocktrans %}
     </div>
