Updates to project/organization create views (#339)
* Add translation create view and remove form from listing

* Add invitation listing to project maintainer list

Also update organization/team listing views with common listing

* More user listing changes

* Add invitation detail view

* Add notification form view

* Consolidate patterns for create view buttons

There are a few different styles used, move this to a common include
instead.

* Add create button include

* Add subheader to redirect form

* Replace remove button on owner listing

This wasn't working correctly as it was iterating over User not
OrganizationOwner.

* Template linting

Co-authored-by: Manuel Kaufmann <humitos@gmail.com>

* More template linting

Co-authored-by: Manuel Kaufmann <humitos@gmail.com>

---------

Co-authored-by: Manuel Kaufmann <humitos@gmail.com>

--- a/readthedocsext/theme/templates/organizations/settings/owners_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/owners_edit.html
@@ -8,7 +8,7 @@
 {% block organization_edit_content_header %}{% trans "Owners" %}{% endblock %}
 
 {% block organization_edit_content %}
-  {% include "organizations/partials/owners_list.html" with objects=owners %}
+  {% include "organizations/partials/owners_list.html" with objects=object_list %}
 
   {% comment %}
     TODO move owner/team member invitations to a dedicated view.
@@ -37,7 +37,7 @@
           {{ invitations.count }}
         </span>
       </h2>
-      {% include "organizations/partials/invitation_list.html" with objects=invitations skip_pagination=True %}
+      {% include "invitations/partials/invitation_list.html" with objects=invitations skip_pagination=True %}
     {% endif %}
   {% endblock team_invitations %}
 {% endblock organization_edit_content %}
