Listing filter UX changes
This drops the custom API driven filters and relies on application
FilterSet instances instead, matching the rest of the filter fields.
Because of this, we are able to delete much of the JS and API logic from
the dashboard side.

- Fixes #343
- Closes #250
- Requires changes on our application filters

--- a/readthedocsext/theme/templates/includes/crud/table_list.html
+++ b/readthedocsext/theme/templates/includes/crud/table_list.html
@@ -69,19 +69,8 @@
 
 <div {% block view_binding %}{% endblock view_binding %}>
   {% block top_menu %}
-    <div class="ui text menu">
+    <div class="ui stackable text menu">
       {% block top_left_menu_items %}
-        {% comment %}
-        <div class="header item">
-          Sort by
-        </div>
-        <a class="active item">
-          Recently built
-        </a>
-        <a class="item">
-          Name
-        </a>
-        {% endcomment %}
       {% endblock top_left_menu_items %}
 
       {% block top_right_menu %}
