--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -9,33 +9,10 @@
 
 {% load ext_theme_tags %}
 
-{% block view_binding %}data-bind="with: ProjectVersionListView()"{% endblock %}
-
 {% block top_left_menu_items %}
-  {# Pass information from Django into site JS #}
-  <script type="application/json" data-bind="jsonInit: config">
-    {
-      "api_url": "{% url "projects-versions-list" project.slug %}"
-    }
-  </script>
-
-  {# Separate UI for the version search selection field #}
-  <div class="header item">{% trans "Version" %}</div>
-  <div class="active item">
-    <div class="ui link search dropdown" data-bind="semanticui: {dropdown: filter_version_config()}">
-      <input type="hidden" name="version" value="{{ filter.form.version.value|default:"" }}">
-      <div class="default text">{% trans "All versions" %}</div>
-      <i class="fa-solid fa-caret-down icon"></i>
-      <div class="menu"></div>
-    </div>
+  <div data-bind="using: FilterView()">
+    {% include "includes/filters/form.html" with fields=filter.form %}
   </div>
-
-  {% comment %}
-  Fields == visible fields here as the versions filter is for show a single
-  version, not actually filtering a list
-  {% endcomment %}
-  {% include "includes/filters/form.html" with fields=filter.form.visible_fields %}
-
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
@@ -58,7 +35,7 @@
 {% endblock list_placeholder_text %}
 
 {% block list_item_start %}
-  <tr class="middle aligned" data-bind="with: version({id: {{ object.pk }}, url: '{% url "projects-versions-detail" object.project.slug object.slug %}'})">
+  <tr class="middle aligned" data-bind="using: VersionListItemView({id: {{ object.pk }}, url: '{% url "projects-versions-detail" object.project.slug object.slug %}'})">
 {% endblock list_item_start %}
 
 {% block list_item_right_menu %}
