--- a/readthedocsext/theme/templates/organizations/partials/organization_list.html
+++ b/readthedocsext/theme/templates/organizations/partials/organization_list.html
@@ -7,10 +7,10 @@
 {% load organizations %}
 {% load privacy_tags %}
 
-{% block view_binding %}data-bind="with: OrganizationListView()"{% endblock view_binding %}
-
 {% block top_left_menu_items %}
-  {% include "includes/filters/form.html" with fields=filter.form %}
+  <div data-bind="using: FilterView()">
+    {% include "includes/filters/form.html" with fields=filter.form %}
+  </div>
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
